fix: teste final de e-mail (SCRUM-1) #comment Agora o e-mail deve estar correto.

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -90,6 +90,14 @@
     "numero = 5\n",
     "print(f\"O fatorial de {numero} é {calcular_fatorial(numero)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7f81282",
+   "metadata": {},
+   "source": [
+    "### Implementações de algoritmos complexos em breve..."
+   ]
   }
  ],
  "metadata": {
